alteração no css do login

--- a/src/app/componentes/paginas/login/login.html
+++ b/src/app/componentes/paginas/login/login.html
@@ -29,9 +29,9 @@
         <label for="lembrar">Lembrar-me</label>
       </div>
 
-      <button type="submit"[disabled]="emailForm.invalid">Entrar</button>
+      <button type="submit" [disabled]="emailForm.invalid">Entrar</button>
       <div class="esqueci">
-        <a href="#">Esqueci minha senha</a>
+      <a routerLink="/esqueci-senha">Esqueci minha senha</a>
       </div>
 
     </form>
