--- a/src/app/componentes/paginas/lista-contatos/lista-contatos.html
+++ b/src/app/componentes/paginas/lista-contatos/lista-contatos.html
@@ -9,8 +9,7 @@
   placeholder="Digite para buscar contato">
 
 
-   <section class="adicionar-contato">
-    <button routerLink="/formulario">
+   <section class="adicionar-contato"><button routerLink="/formulario">
       <img src="assets/plus.png" alt="">
       <span>Adicionar contato </span>
     </button>
