--- a/src/app/componentes/paginas/perfil-contato/perfil-contato.html
+++ b/src/app/componentes/paginas/perfil-contato/perfil-contato.html
@@ -2,22 +2,54 @@
 
   <div class="perfil-contato">
 
-  
     <div class="logo">
-      <img src="assets/logo.png" alt="">
+      <img src="assets/logo.png" alt="Logo">
     </div>
 
-
-    
     <div class="logo">
-      <img src="assets/perfil-contato.png" alt="">
+      <img src="assets/perfil-contato.png" alt="Perfil">
     </div>
 
     <h3>Perfil do Contato</h3>
-
     <hr>
 
+
+    <div class="caixa">
+
+
+      <div class="topo-contato">
+        <img class="foto" src="assets/anali.png" alt="">
+        <h4>Ana Livia Neves Correia</h4>
+      </div>
+
+      <hr>
+
+      <div class="info">
+        <p><strong>Número</strong></p>
+        <span>+55 47 98471-4110</span>
+
+        <p><strong>E-mail</strong></p>
+        <span>analivnc@email.com.br</span>
+
+        <p><strong>Data de nascimento</strong></p>
+        <span>28/12/2007</span>
+
+        <p><strong>Redes sociais</strong></p>
+        <span>linkedln.com/analivnc</span>
+        <br>
+        <br>
+        <span>instagram.com/analivnc</span>
+        <br>
+        <br>
+      </div>
+
+      <div class="botoes">
+        <button class="btn-excluir">Excluir contato</button>
+        
+        <button class="btn-editar">Editar</button>
+      </div>
+
+    </div>
 </div>
 
 </app-conteiner>
-
